packages/clippier/tests/snapshots/business_logic_tests__environment_command_complex_ubuntu.snap
---
source: packages/clippier/tests/business_logic_tests.rs
expression: env_vars
---
API_PORT="3000"
DATABASE_URL="sqlite://test.db"
API_PORT="3000"
API_PORT="3000"
FRONTEND_BUILD="production"
WEB_PORT="8080"
API_PORT="3000"
FRONTEND_BUILD="production"
SSR_ENABLED="true"
WEB_PORT="8080"
