packages/clippier/tests/snapshots/business_logic_tests__environment_command_json_output.snap
---
source: packages/clippier/tests/business_logic_tests.rs
expression: parsed
---
- "API_PORT=\"3000\"\nDATABASE_URL=\"sqlite://test.db\""
- "API_PORT=\"3000\""
- "API_PORT=\"3000\"\nFRONTEND_BUILD=\"production\"\nWEB_PORT=\"8080\""
- "API_PORT=\"3000\"\nFRONTEND_BUILD=\"production\"\nSSR_ENABLED=\"true\"\nWEB_PORT=\"8080\""
