packages/clippier/tests/snapshots/business_logic_tests__environment_command_with_features.snap
---
source: packages/clippier/tests/business_logic_tests.rs
expression: env_vars
---
API_PORT="3000"
API_PORT="3000"
FRONTEND_BUILD="production"
WEB_PORT="8080"
API_PORT="3000"
FRONTEND_BUILD="production"
SSR_ENABLED="true"
WEB_PORT="8080"
