packages/clippier/tests/snapshots/business_logic_tests__environment_deduplication.snap
---
source: packages/clippier/tests/business_logic_tests.rs
expression: env_vars
---
DATABASE_URL="sqlite:///tmp/test.db"
PORT="8080"
