packages/clippier/tests/snapshots/business_logic_tests__exact_deduplication_result.snap
---
source: packages/clippier/tests/business_logic_tests.rs
expression: dependencies
---
apt-get update && apt-get install -y build-essential
apt-get update && apt-get install -y libssl-dev
