packages/clippier/tests/snapshots/business_logic_tests__features_command_complex_ubuntu.snap
---
source: packages/clippier/tests/business_logic_tests.rs
expression: features
---
["database","default","server"]
["default","frontend"]
["ssr"]
["default","frontend"]
["ssr"]
