packages/clippier/tests/snapshots/business_logic_tests__features_command_with_filters.snap
---
source: packages/clippier/tests/business_logic_tests.rs
expression: parsed
---
- dependencies: apt-get update && apt-get install -y build-essential
  env: "API_PORT=\"3000\""
  features:
    - frontend
    - ssr
  name: api
  nightly: false
  os: ubuntu
  path: /tmp/nix-shell-16502-0/.tmpQVnzI7/packages/api
  requiredFeatures:
    - core
- ciSteps: "npm install\nnpm run build"
  dependencies: apt-get update && apt-get install -y nodejs npm
  env: "FRONTEND_BUILD=\"production\"\nWEB_PORT=\"8080\""
  features:
    - frontend
  name: frontend-build
  nightly: false
  os: ubuntu
  path: /tmp/nix-shell-16502-0/.tmpQVnzI7/packages/web
  requiredFeatures:
    - core
- env: "WEB_PORT=\"8080\""
  features:
    - ssr
  name: frontend-build
  nightly: false
  os: ubuntu
  path: /tmp/nix-shell-16502-0/.tmpQVnzI7/packages/web
  requiredFeatures:
    - core
- env: "FRONTEND_BUILD=\"production\"\nSSR_ENABLED=\"true\"\nWEB_PORT=\"8080\""
  features:
    - frontend
  name: ssr-build
  nightly: false
  os: ubuntu
  path: /tmp/nix-shell-16502-0/.tmpQVnzI7/packages/web
  requiredFeatures:
    - core
- dependencies: apt-get update && apt-get install -y nodejs npm
  env: "SSR_ENABLED=\"true\"\nWEB_PORT=\"8080\""
  features:
    - ssr
  name: ssr-build
  nightly: false
  os: ubuntu
  path: /tmp/nix-shell-16502-0/.tmpQVnzI7/packages/web
  requiredFeatures:
    - core
